Improve video dimensions. Fix issues with the captions not showing up because of z-index. Improve the caption search method.

--- a/acornmediaplayer/acornmediaplayer.base.css
+++ b/acornmediaplayer/acornmediaplayer.base.css
@@ -82,6 +82,7 @@
 	display: none;
 	position: absolute;
 	bottom: 75px;
+	z-index: 12;
 	width: 100%;
 	
 	text-align: center;
